src/snapshots/jj_pr__tests__show-all@jj-pr-conflict-1778014006.json.gz.snap
---
source: src/tests.rs
expression: "render_show(&f, true)"
input_file: src/fixtures/jj-pr-conflict-1778014006.json.gz
---
[31m✗[0m  [1m[36m]8;;https://github.com/hydro-project/jj-pr/pull/36PR #36]8;;[0m*  [33mDraft[0m  [1m[35mhandle-forks[0m
│  Remove bookmark_track from create, update README for fork workflows
│ ○  [1m[36m]8;;https://github.com/hydro-project/jj-pr/pull/45PR #45]8;;[0m*  [32mReady[0m  [1m[35mred-x[0m
├─╯  feat: use red ✗ for conflicted branches in show/log views
[1m[36m◆[0m  [1m[32mtrunk()[0m
[2m~[0m  [2m(elided revisions)[0m
